# Python_for_Data_Science

./: .gitignore  piscine_python0_traduction_fr.md  piscine_python1_array_traduction_fr.md  piscine_python2_datatable_traduction_fr.md  piscine_python3_oop_traduction_fr.md  piscine_python4_dod_traduction_fr.md  piscines_traduction_fr.md
python_0/ex00/: Hello.py
python_0/ex01/: format_ft_time.py
python_0/ex02/: find_ft_type.py  tester.py
python_0/ex03/: NULL_not_found.py  tester.py
python_0/ex04/: whatis.py
python_0/ex05/: building.py
python_0/ex06/: filterstring.py  ft_filter.py  test_ft_filter.py
python_0/ex07/: sos.py
python_0/ex08/: Loading.py  test.py
python_0/ex09/: LICENSE  README.md  pyproject.toml  tester.py
python_0/ex09/ft_package/: __init__.py  count.py
python_1/ex00/: give_bmi.py
python_1/ex01/: array2D.py
python_1/ex02/: load_image.py  tester.py
python_1/ex03/: find_zoom_zone.py  zoom.py
python_1/ex04/: load_image.py  rotate.py
python_1/ex05/: load_image.py  pimp_image.py  tester.py
python_2/ex00/: ex00.md  tester.py
python_2/ex01/: aff_life.py  load_csv.py  tester.py
python_2/ex02/: aff_pop.py
python_2/ex03/: ex03.md  projection_life.py
python_3/ex00/: ex00.md  tester.py
python_3/ex01/: S1E7.py  S1E9.py  ex01.md  tester.py
python_3/ex02/: DiamondTrap.py  ex02.md  tester.py
python_3/ex03/: ex03.md  ft_calculator.py  tester.py
python_3/ex04/: ex04.md  ft_calculator.py  tester.py
python_4/ex00/: ex00.md  statistics.py  tester.py
python_4/ex01/: ex01.md  in_out.py  tester.py
venv_python_pool/: pyvenv.cfg
(+6 files in other folders)
